tests/snapshots/examples_fixtures/diagnostics__errors__match_guard_non_exhaustive_error.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics/errors/match_guard_non_exhaustive_error.flx
== compile ==
failed (compile)
== diagnostics ==
error[E015]: Non-Exhaustive Match

Match is not exhaustive: 1 missing pattern.

  examples/diagnostics/errors/match_guard_non_exhaustive_error.flx:4:22
  |
4 | let non_exhaustive = match 42 {
  |                      ^^^^^^^^^^
5 |     _ if true -> 1,
  | ^^^^^^^^^^^^^^^^^^^
6 | };
  | ^

Hint:
  Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: Console).

  examples/diagnostics/errors/match_guard_non_exhaustive_error.flx:7:1
  |
7 | print(non_exhaustive);
  | ^^^^^^^^^^^^^^^^^^^^^^
  | ---------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  examples/diagnostics/errors/match_guard_non_exhaustive_error.flx:7:1
  |
7 | print(non_exhaustive);
  | ^^^^^^^^^^^^^^^^^^^^^^
  | ---------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.

Found 3 errors.
== stdout ==
<not executed>
