tests/snapshots/examples_fixtures/diagnostics__errors__match_guards_error_path.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics/errors/match_guards_error_path.flx
== compile ==
failed (compile)
== diagnostics ==
error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: Console).

  examples/diagnostics/errors/match_guards_error_path.flx:6:1
  |
6 | print("Run one of the dedicated match-guard error examples in this folder.");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ----------------------------------------------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  examples/diagnostics/errors/match_guards_error_path.flx:6:1
  |
6 | print("Run one of the dedicated match-guard error examples in this folder.");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ----------------------------------------------------------------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.

Found 2 errors.
== stdout ==
<not executed>
