tests/snapshots/examples_fixtures/diagnostics__errors__module_name_clobber_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics/errors/module_name_clobber_error.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
