tests/snapshots/examples_fixtures/diagnostics__errors__multiple_errors.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics/errors/multiple_errors.flx
== compile ==
failed (parse)
== diagnostics ==
error[E076]: Missing Closing Delimiter

Expected a closing `)` to match this opening `(`.

  examples/diagnostics/errors/multiple_errors.flx:9:6
  |
9 | print("test"
  |      ^

note: Expected `)` before this token.
  examples/diagnostics/errors/multiple_errors.flx:10:1
   |
== stdout ==
<not executed>
